<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="feature_sendmoney_add">Add</string>
    <string name="feature_sendmoney_mock_text">MainFragment</string>
    <string name="feature_sendmoney_add_money_option_desc">Select how to add money</string>
    <string name="feature_sendmoney_option_debit_credit_card">Debit or credit card</string>
    <string name="feature_sendmoney_card_desc1">Enter card details</string>
    <string name="feature_sendmoney_card_desc2">This card must be in your name</string>
    <string name="feature_sendmoney_card_number_hint">16 digit card number</string>
    <string name="feature_sendmoney_card_date_hint">MM/YY</string>
    <string name="feature_sendmoney_card_cvv_hint">CVV</string>
    <string name="feature_sendmoney_card_action">Continue</string>

    <string name="feature_sendmoney_card_number_error">Please enter a valid card number</string>
    <string name="feature_sendmoney_card_date_error">Enter correct date</string>
    <string name="feature_sendmoney_card_cvv_error">Please enter full details</string>
    <string name="feature_sendmoney_amount_desc">How much do you want to add?</string>
    <string name="feature_sendmoney_amount_hint">0.00</string>
    <string name="feature_sendmoney_amount_currency">GBP</string>
    <string name="feature_sendmoney_amount_subtitle1">Add money with</string>
    <string name="feature_sendmoney_amount_change">Change</string>
    <string name="feature_sendmoney_amount_bank_name_mock">STARLING BANK</string>
    <string name="feature_sendmoney_amount_subtitle2">Add money to</string>
    <string name="feature_sendmoney_amount_balance_title">Balance</string>
    <string name="feature_sendmoney_amount_balance_mock">£1,200.00</string>
    <string name="feature_sendmoney_amount_destination_name_mock">Witty GBP</string>
    <string name="feature_sendmoney_amount_action">Add money</string>
    <string name="feature_sendmoney_verification_action">Verify</string>
    <string name="feature_sendmoney_successful_title">Payment successful</string>
    <string name="feature_sendmoney_successful_type">Type</string>
    <string name="feature_sendmoney_successful_type_mock">Card</string>
    <string name="feature_sendmoney_successful_number">Card number</string>
    <string name="feature_sendmoney_successful_date">Expiry date</string>
    <string name="feature_sendmoney_successful_cvv">CVV</string>
    <string name="feature_sendmoney_successful_amount">Amount</string>
    <string name="feature_sendmoney_successful_action">Return home</string>
</resources>