<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding32"
        android:text="@string/feature_sendmoney_successful_title"
        android:textSize="@dimen/textSize28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/typeRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding24"
        android:layout_marginTop="@dimen/padding24"
        android:layout_marginEnd="@dimen/padding24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_sendmoney_successful_type"
            android:textSize="@dimen/textSize16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/feature_sendmoney_successful_type_mock"
            android:textSize="@dimen/textSize16" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/cardNumberRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding24"
        android:layout_marginTop="@dimen/padding8"
        android:layout_marginEnd="@dimen/padding24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_sendmoney_successful_number"
            android:textSize="@dimen/textSize16" />

        <TextView
            android:id="@+id/cardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="0000 0000 0000 0000"
            android:textSize="@dimen/textSize16" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/cardDateRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding24"
        android:layout_marginTop="@dimen/padding8"
        android:layout_marginEnd="@dimen/padding24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardNumberRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_sendmoney_successful_date"
            android:textSize="@dimen/textSize16" />

        <TextView
            android:id="@+id/cardDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="01/23"
            android:textSize="@dimen/textSize16" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/cardCvvRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding24"
        android:layout_marginTop="@dimen/padding8"
        android:layout_marginEnd="@dimen/padding24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardDateRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_sendmoney_successful_cvv"
            android:textSize="@dimen/textSize16" />

        <TextView
            android:id="@+id/cardCvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="123"
            android:textSize="@dimen/textSize16" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/cardAmountRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding24"
        android:layout_marginTop="@dimen/padding8"
        android:layout_marginEnd="@dimen/padding24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardCvvRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_sendmoney_successful_amount"
            android:textSize="@dimen/textSize16" />

        <TextView
            android:id="@+id/cardAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="0.05"
            android:textSize="@dimen/textSize16" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/feature_sendmoney_successful_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>